tests/NormalTests/paczka1/fuzzy1/45264004.err
Error in line 5: waI0 S981 96,6
Error in line 13: mZ5py S889 -2,4
Error in line 8: waI0 S582 65,7
Error in line 10: mZ5py S889 80,7
Error in line 18: nt1Q7ixd S981 65,9
Error in line 23: nt1Q7ixd A144 94,9
